# python-architecture-patters

./: Makefile  README.md  model.py  pyproject.toml
tests/: test_model.py
