[tool.poetry]
name = "python-architecture-patters"
version = "0.1.0"
description = ""
authors = ["Angela Santin <angela.d.santin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.4"
black = "^21.5b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
